distributed microservice configurations successfully and working perfectly fine

--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -8,7 +8,9 @@
         <artifactId>e-commerce</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>service-registry</artifactId>
+
+    <artifactId>config-server</artifactId>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -17,11 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
     </dependencies>
 </project>
