--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>payment-service</module>
     <module>service-registry</module>
     <module>gateway</module>
+      <module>config-server</module>
   </modules>
 
   <properties>
