--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <spring.boot.maven.plugin.version>2.7.16</spring.boot.maven.plugin.version>
-    <spring.boot.dependencies.version>2.7.16</spring.boot.dependencies.version>
-    <spring-cloud.version>2021.0.8</spring-cloud.version>
+    <spring.boot.maven.plugin.version>3.0.11</spring.boot.maven.plugin.version>
+    <spring.boot.dependencies.version>3.0.11</spring.boot.dependencies.version>
+<!--    <spring-cloud.version>2021.0.8</spring-cloud.version>-->
+    <spring-cloud.version>2022.0.4</spring-cloud.version>
   </properties>
   <dependencyManagement>
     <dependencies>
