--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
     <module>service-registry</module>
     <module>gateway</module>
       <module>config-server</module>
+      <module>employee-service</module>
+    <module>address-service</module>
   </modules>
 
   <properties>
