--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
     <module>payment-service</module>
     <module>service-registry</module>
     <module>gateway</module>
-      <module>config-server</module>
-      <module>employee-service</module>
+    <module>config-server</module>
+    <module>employee-service</module>
     <module>address-service</module>
+    <module>reactive</module>
   </modules>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
