--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -8,9 +8,7 @@
         <artifactId>e-commerce</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <artifactId>order-service</artifactId>
-
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -41,6 +39,16 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-aop</artifactId>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+            <dependency>
+                <groupId>org.modelmapper</groupId>
+                <artifactId>modelmapper</artifactId>
+                <version>3.1.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
