--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>service-registry</module>
     <module>gateway</module>
       <module>config-server</module>
+      <module>auth-service</module>
   </modules>
 
   <properties>
