--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,19 @@
   <artifactId>e-commerce</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-
   <name>e-commerce</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.github.com/kisevu</url>
+  <url>https://www.github.com/kisevu</url>
   <modules>
     <module>order-service</module>
     <module>payment-service</module>
     <module>service-registry</module>
     <module>gateway</module>
-      <module>config-server</module>
-      <module>auth-service</module>
+    <module>config-server</module>
+    <module>auth-service</module>
+    <module>post</module>
+    <module>user</module>
   </modules>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
